@@ -2,7 +2,7 @@ module Devise
   # Helpers to migration:
   #
   #   create_table :accounts do |t|
-  #     t.authenticable
+  #     t.authenticatable
   #     t.confirmable
   #     t.recoverable
   #     t.rememberable
@@ -19,11 +19,18 @@ module Devise
 
     # Creates email, encrypted_password and password_salt.
     #
-    def authenticable(options={})
+    def authenticatable(options={})
       null = options[:null] || false
       string :email,              :limit => 100, :null => null
       string :encrypted_password, :limit =>  40, :null => null
       string :password_salt,      :limit =>  20, :null => null
+    end
+
+    # TODO Remove me in a next release.
+    #
+    def authenticable(*args)
+      ActiveSupport::Deprecation.warn "authenticable in migrations is deprecated, use authenticatable instead"
+      authenticatable(*args)
     end
 
     # Creates confirmation_token, confirmed_at and confirmation_sent_at.
